# sm

./: pubspec.yaml
.github/: dependabot.yml
.github/workflows/: build.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
integration_test/: simple_test.dart
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: sendme.dart  sendme.freezed.dart  simple.dart
linux/flutter/: generated_plugins.cmake
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: sendme.rs  simple.rs
rust_builder/: pubspec.yaml
windows/flutter/: generated_plugins.cmake
