[package]
name = "rust_lib_my_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
iroh = "1.0.0"
iroh-blobs = "0.103"
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
walkdir = "2.4"
rand = "0.8"
hex = "0.4.3"
once_cell = "1.19"
data-encoding = "2.6.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

